--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 :root {
     --fonte1: 'Poppins', Verdana, sans-serif;
     --cor1: #0c1416;
-    --cor2: #273035;
+    --cor2: #161f24;
     --cor3: #74A9B3;
     --cor4: #618E96;
     --cor5: #44c3da;
@@ -34,19 +34,24 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
+    padding: 20px;
     height: 5vh;
 }
 .cabecalho> nav {
-    background-color: #2730355b;
+    background-color: #111619;
     padding: 10px;
     border-radius: 15px;
+}
+
+.cabecalho-infor {
+    position: fixed;
+    top: 20px;
 }
 
 .cabecalho-infor > a{
     font-size: 15px;
     text-decoration: none;
-    color: #ffffffb2;
+    color: #ffffffc5;
     padding: 6px 10px;
     transition: 0.5s;
 }
@@ -56,13 +61,13 @@ body {
     font-size: 17px;
 }
 
-#cabecalho-quem {
+#contato {
     color: #74A9B3;
     border: 1px 1px #74A9B3;
     border-radius: 20px;
 }
 
-#cabecalho-quem:hover {
+#contato:hover {
     color: var(--cor5);
 }
 
@@ -127,6 +132,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     text-align: center;
+    height: 100vh;
     background-color: var(--cor1);
     padding: 50px 30px;
     box-shadow: 0px -20px 40px var(--cor1);
@@ -135,10 +141,10 @@ body {
 .foto-quem-sou-eu > img{
     width: 100%;
     max-width: 250px;
+    padding-right: 20px;
 } 
 
 .conteudo-quem-sou-eu {
-    padding-left: 50px;
     max-width: 600px;
     text-align: left;
 }
@@ -169,4 +175,38 @@ body {
     background-color: var(--cor5);
     font-size: 16px;
     transition: 0.5s;
+}
+
+.area-habilidades {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--cor2);
+    padding: 20px;
+    height: 100vh;
+}
+
+.area-tec > h2 {
+    font-size: 30px;
+    font-weight: 500;
+    padding: 10px;
+    text-align: center;
+}
+
+hr {
+    border-color: var(--cor1);
+    width: 70vw;
+    margin: auto;
+}
+
+.img-tec {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.img-tec > img {
+    width: 20%;
+    max-width: 100px;
+    padding: 30px 20px;
 }
