--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
     --cor5: #44c3da;
 
     --gradient-fundo: linear-gradient(to bottom right, #000000, #0c1416, #273035);
+} 
+
+html {
+    scroll-behavior: smooth;
 }
 
 
@@ -73,9 +77,8 @@ body {
 
 .area-apresentacao {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
     padding: 0px 20px 0px 20px;
     height: 92vh;
     background-image: url(imagens/foto-fundo-principal.png);
@@ -87,9 +90,7 @@ body {
 
 .area-infor {
     padding: 10px;
-    text-align: left;
-    margin: auto;
-    padding-top: 40vh;
+    text-align: center;
 }
 
 .area-infor > h1 {
@@ -112,7 +113,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 70vh;
 }
 
 .area-rede-social > a {
@@ -149,7 +149,7 @@ body {
     text-align: left;
 }
 
-.conteudo-quem-sou-eu > h2 {
+.conteudo-quem-sou-eu > h1 {
     color: var(--cor5);
     padding: 20px 0px;
     font-size: 30px;
@@ -209,4 +209,28 @@ hr {
     width: 20%;
     max-width: 100px;
     padding: 30px 20px;
+}
+
+.area-projetos > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 30px;
+}
+
+.area-projetos > h1 {
+    padding-top: 70px;
+    text-align: center;
+    font-size: 40px;
+}
+
+.area-projetos img {
+    width: 40%;
+    max-width: 300px;
+}
+
+.conteudo-projetos {
+    max-width: 500px;
+    padding: 0px 30px;
 }
