ajuste de padding area projeto

--- a/style.css
+++ b/style.css
@@ -226,11 +226,15 @@ hr {
 }
 
 .area-projetos img {
-    width: 40%;
-    max-width: 300px;
+    width: 100%;
+    max-width: 350px;
 }
 
 .conteudo-projetos {
     max-width: 500px;
-    padding: 0px 30px;
+    padding: 30px 30px;
+}
+
+.area-projetos > .projeto-2 {
+    flex-wrap: wrap-reverse;
 }
