--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 .gmail-contato > img {
