--- a/style.css
+++ b/style.css
@@ -216,6 +216,10 @@ hr {
     padding: 30px 20px;
 }
 
+.area-projetos {
+    padding-bottom: 20px;
+}
+
 .area-projetos > div{
     display: flex;
     flex-direction: row;
