--- a/style.css
+++ b/style.css
@@ -208,11 +208,11 @@ hr {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .img-tec > img {
-    width: 20%;
-    max-width: 100px;
+    max-width: 80px;
     padding: 30px 20px;
 }
 
@@ -285,12 +285,13 @@ hr {
 .area-contato > h1 {
     text-align: center;
     font-weight: 500;
-}
+    padding: 10px;}
 
 .img-contatos {
     display: flex;
     flex-direction: row;    
     justify-content: center;
+    height: 8vh;
 }
 
 .img-contatos > a {
@@ -298,8 +299,12 @@ hr {
 }
 
 .img-contatos > a > img {
-    max-width: 30px;
+    width: 30px;
+    transition: 0.5s;
+}
 
+.img-contatos > a > img:hover {
+    width: 35px;
 }
 
 .gmail-contato {
